triplan/triplan-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: triplan
  labels:
    k8s-app: triplan-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: triplan
        type: application
        service: triplan-service
        version: "master"
        owner: ""
        timestamp: ""
    spec:
      containers:
      - name: triplan
        image: pengyue/node-triplan-content-scrapper-app:latest
        ports:
          - containerPort: 80
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /health-liveness
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health-readiness
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
