triplan/triplan-service.yml
apiVersion: v1
kind: Service
metadata:
  name: triplan
  labels:
    k8s-app: triplan-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    k8s-app: triplan
  type: LoadBalancer
