triplan/triplan-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: triplan
  namespace: test
spec:
  rules:
    - host: triplan.ml10.home
      http:
        paths:
          - backend:
              serviceName: triplan
              servicePort: 8080
            path: /
